--- a/extern/monaco-editor-0.20.0/editor.html
+++ b/extern/monaco-editor-0.20.0/editor.html
@@ -58,208 +58,12 @@
             });
         });
     </script>
-
     <script>
-        monaco.languages.register({ id: 'qml' })
-        monaco.languages.setMonarchTokensProvider('qml', {
-            keywords: ['readonly', 'property', 'for', 'if', 'else', 'do', 'while', 'true', 'false', 'signal', 'const', 'switch', 'import', 'as', "on", 'async', 'console', "let", "default", "function"],
-            typeKeywords: ['int', 'real', 'var', 'string', 'color', 'url', 'alias', 'bool'],
-            operators: [
-                '=', '>', '<', '!', '~', '?', ':', '==', '<=', '>=', '!=', '===', '<==', '>==', '!==',
-                '&&', '||', '++', '--', '+', '-', '*', '/', '&', '|', '^', '%',
-                '<<', '>>', '>>>', '+=', '-=', '*=', '/=', '&=', '|=', '^=',
-                '%=', '<<=', '>>=', '>>>='
-            ],
-            digits: /\d+(_+\d+)*/,
-            symbols: /[=><!~?:&|+\-*\/\^%]+/,
-            escapes: /\\(?:[abfnrtv\\"']|x[0-9A-Fa-f]{1,4}|u[0-9A-Fa-f]{4}|U[0-9A-Fa-f]{8})/,
-            regexpctl: /[(){}\[\]\$\^|\-*+?\.]/,
-            regexpesc: /\\(?:[bBdDfnrstvwWn0\\\/]|@regexpctl|c[A-Z]|x[0-9a-fA-F]{2}|u[0-9a-fA-F]{4})/,
-            tokenizer: {
-                root: [
-                    [/[{}]/, 'delimiter.bracket'],
-                    [/[a-z_$][\w$]*/, {
-                        cases: {
-                            '@typeKeywords': 'keyword',
-                            '@keywords': 'keyword',
-
-                        }
-                    }
-                    ],
-                    [/[A-Z][\w\$]*/, 'type.identifier'],
-                    [/(?:^|\{|;)\s*[a-z][\w\.]*\s*(?=\:|\{)/, "property.defs"],
-                    { include: '@whitespace' },
-                    [/\/(?=([^\\\/]|\\.)+\/([gimsuy]*)(\s*)(\.|;|\/|,|\)|\]|\}|$))/, { token: 'regexp', bracket: '@open', next: '@regexp' }],
-                    [/[()\[\]]/, '@brackets'],
-                    [/[<>](?!@symbols)/, '@brackets'],
-                    [/@symbols/, {
-                        cases: {
-                            '@operators': 'delimiter',
-                            '@default': ''
-                        }
-                    }
-                    ],
-                    [/(@digits)[eE]([\-+]?(@digits))?/, 'number.float'],
-                    [/(@digits)\.(@digits)([eE][\-+]?(@digits))?/, 'number.float'],
-                    [/(@digits)/, 'number'],
-                    [/[;,.]/, 'delimiter'],
-                    [/"([^"\\]|\\.)*$/, 'string.invalid'],  // non-teminated string
-                    [/'([^'\\]|\\.)*$/, 'string.invalid'],  // non-teminated string
-                    [/"/, 'string', '@string_double'],
-                    [/'/, 'string', '@string_single'],
-                    [/`/, 'string', '@string_backtick'],
-
-                ],
-                whitespace: [
-                    [/[ \t\r\n]+/, ''],
-                    [/\/\*\*(?!\/)/, 'comment.doc', '@jsdoc'],
-                    [/\/\*/, 'comment', '@comment'],
-                    [/\/\/.*$/, 'comment'],
-                ],
-
-                comment: [
-                    [/[^\/*]+/, 'comment'],
-                    [/\*\//, 'comment', '@pop'],
-                    [/[\/*]/, 'comment']
-                ],
-
-                jsdoc: [
-                    [/[^\/*]+/, 'comment.doc'],
-                    [/\*\//, 'comment.doc', '@pop'],
-                    [/[\/*]/, 'comment.doc']
-                ],
-
-                // We match regular expression quite precisely
-                regexp: [
-                    [/(\{)(\d+(?:,\d*)?)(\})/, ['regexp.escape.control', 'regexp.escape.control', 'regexp.escape.control']],
-                    [/(\[)(\^?)(?=(?:[^\]\\\/]|\\.)+)/, ['regexp.escape.control', { token: 'regexp.escape.control', next: '@regexrange' }]],
-                    [/(\()(\?:|\?=|\?!)/, ['regexp.escape.control', 'regexp.escape.control']],
-                    [/[()]/, 'regexp.escape.control'],
-                    [/@regexpctl/, 'regexp.escape.control'],
-                    [/[^\\\/]/, 'regexp'],
-                    [/@regexpesc/, 'regexp.escape'],
-                    [/\\\./, 'regexp.invalid'],
-                    [/(\/)([gimsuy]*)/, [{ token: 'regexp', bracket: '@close', next: '@pop' }, 'keyword.other']],
-                ],
-
-                regexrange: [
-                    [/-/, 'regexp.escape.control'],
-                    [/\^/, 'regexp.invalid'],
-                    [/@regexpesc/, 'regexp.escape'],
-                    [/[^\]]/, 'regexp'],
-                    [/\]/, { token: 'regexp.escape.control', next: '@pop', bracket: '@close' }],
-                ],
-
-                string_double: [
-                    [/[^\\"]+/, 'string'],
-                    [/@escapes/, 'string.escape'],
-                    [/\\./, 'string.escape.invalid'],
-                    [/"/, 'string', '@pop']
-                ],
-
-                string_single: [
-                    [/[^\\']+/, 'string'],
-                    [/@escapes/, 'string.escape'],
-                    [/\\./, 'string.escape.invalid'],
-                    [/'/, 'string', '@pop']
-                ],
-
-                string_backtick: [
-                    [/\$\{/, { token: 'delimiter.bracket' }],
-                    [/[^\\`$]+/, 'string'],
-                    [/@escapes/, 'string.escape'],
-                    [/\\./, 'string.escape.invalid'],
-                    [/`/, 'string', '@pop']
-                ],
-            }
-
-        })
-        monaco.editor.defineTheme('qmlTheme', {
-            base: 'vs',
-            inherit: false,
-            rules: [
-                { token: "comment", foreground: "#32C132" },
-                { token: "delimiter.bracket", foreground: "#000000" },
-                { token: "keyword", foreground: "#C6CC18" },
-                { token: "type.identifier", foreground: "#DF00FF" },
-                { token: "string", foreground: "#32C132" },
-                { token: "property.defs", foreground: "#BA262B" },
-            ]
-        })
-
-        monaco.languages.registerCompletionItemProvider('qml', {
-            triggerCharacters: ['{', '.'],
-            provideCompletionItems: (model, position) => {
-                var textUntilPosition = model.getValueInRange({ startLineNumber: 1, startColumn: 1, endLineNumber: position.lineNumber, endColumn: position.column });
-                var currText = model.getValueInRange({ startLineNumber: position.lineNumber, startColumn: 0, endLineNumber: position.lineNumber, endColumn: position.column });
-                var currWords = currText.replace("\t", "").split(" ");
-                var word = model.getWordUntilPosition(position);
-                var active = currWords[currWords.length - 1]
-
-                var range = {
-                    startLineNumber: position.lineNumber,
-                    endLineNumber: position.lineNumber,
-                    startColumn: word.startColumn,
-                    endColumn: word.endColumn
-                };
-                var sgwidgetsFlag = textUntilPosition.match(`import tech.strata.sgwidgets 1.0`);
-                var qtQuickFlag = textUntilPosition.match(`import QtQuick`)
-                initializeQtQuick({ qtQuickFlag: qtQuickFlag, sgwidgetsFlag: sgwidgetsFlag })
-                var suggestions = []
-                for(var i = 0; i < BasicItemProperties.length; i++){
-                    suggestions.push({
-                        label: BasicItemProperties[i],
-                        kind: monaco.languages.CompletionItemKind.KeyWord,
-                        insertTextRules: monaco.languages.CompletionItemInsertTextRule.InsertAsSnippet,
-                        insertText: BasicItemProperties[i],
-                        range: range
-                    })
-                }
-                for (const [key] of Object.entries(qtObjectKeyValues)) { 
-                    suggestions.push({
-                            label: qtObjectKeyValues[key].label,
-                            kind: monaco.languages.CompletionItemKind.Class,
-                            insertTextRules: monaco.languages.CompletionItemInsertTextRule.InsertAsSnippet,
-                            insertText: qtObjectKeyValues[key].insertText,
-                            range: range
-                    })
-                }
-                          
-                if(qtObjectKeyValues.hasOwnProperty(active.substring(0,active.length - 1).split('.'|'{'|'\s{')[0])){
-                        var propRange = {
-                            startLineNumber: position.lineNumber + 1,
-                            endLineNumber: position.lineNumber + 1,
-                            startColumn: word.startColumn,
-                            endColumn: word.endColumn
-                        };
-                        convertStrArrayToObjArray(qtObjectKeyValues[active.substring(0,active.length - 1).split('.'|'{'|'\s{')[0]].properties, propRange)
-                        return { suggestions: propertySuggestions, incomplete: true}
-                } else {
-                    clearPropertySuggestions()
-                }
-                return {suggestions: suggestions}
-            }
-        })
-
-        var editor = monaco.editor.create(document.getElementById('container'), {
-            value: "",
-            language: 'qml',
-            theme: "qmlTheme",
-            insertSpaces: true,
-            detectIndentation: true,
-            tabCompletion: "on",
-            formatOnPaste: true,
-            insertMode: "replace",
-        });
-
-        function getValue() {
-            return editor.getValue();
+        if(!isInitialized){
+            registerQmlAsLanguage()
+        } else {
+            editor.dispose()
         }
-
-        function setValue(value) {
-            editor.setValue(value)
-        }
-
     </script>
 </body>
 
