added a recursive search for matching pair brackets

--- a/extern/monaco-editor-0.20.0/editor.html
+++ b/extern/monaco-editor-0.20.0/editor.html
@@ -82,6 +82,8 @@
                 }
             }
             registerQmlAsLanguage()
+        } else {
+            editor.dispose()
         } 
     </script>
 </body>
