edge case missed and fixed

--- a/extern/monaco-editor-0.20.0/editor.html
+++ b/extern/monaco-editor-0.20.0/editor.html
@@ -67,7 +67,7 @@
             for (var i = 0; i < BasicItemProperties.length; i++) {
                 suggestions[BasicItemProperties[i]] = {
                     label: BasicItemProperties[i],
-                    kind: monaco.languages.CompletionItemKind.KeyWord,
+                    kind: monaco.languages.CompletionItemKind.Property,
                     insertTextRules: monaco.languages.CompletionItemInsertTextRule.InsertAsSnippet,
                     insertText: BasicItemProperties[i],
                     range: null,
