All edge cases handled

--- a/extern/monaco-editor-0.20.0/editor.html
+++ b/extern/monaco-editor-0.20.0/editor.html
@@ -60,6 +60,7 @@
         });
     </script>
     <script>
+        alert(JSON.stringify(qmlSuggestions))
         if(!isInitialized){
             flags.sgwidgetsFlag = true
             flags.qtQuickFlag = true
