added the link logic for the seacrh UUID

--- a/extern/monaco-editor-0.20.0/editor.html
+++ b/extern/monaco-editor-0.20.0/editor.html
@@ -44,6 +44,10 @@
                 editor.layout()
             });
 
+            link.goToUUID.connect(function (uuid){
+                searchForUUID(uuid)
+            })
+
             link.undo.connect(function () {
                 editor.trigger('undoClicked', 'undo');
             });
