--- a/extern/monaco-editor-0.20.0/editor.html
+++ b/extern/monaco-editor-0.20.0/editor.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div id="container" style="width: 100%; height: 100%;"></div>
+    <div id="container" style="width: 100%; height: 300px;"></div>
     <!-- 
             the "loader.js" adds the editor and initializes the require variable
             the "editor.main.js" inits and defines the MonacoEditor
