--- a/extern/monaco-editor-0.20.0/editor.html
+++ b/extern/monaco-editor-0.20.0/editor.html
@@ -26,6 +26,7 @@
     <script src="./qtQuickTypes.js" type="text/javascript"></script>
     <script src="./qtQuick.js" type="text/javascript"></script>
     <script type="text/javascript">
+        var fileExtension = "qml"
         new QWebChannel(qt.webChannelTransport, function (channel) {
             // all published objects are available in channel.objects under
             // the identifier set in their attached WebChannel.id property
@@ -59,16 +60,19 @@
                 editor.trigger('redoClicked', 'redo');
             });
 
+            link.setLanguage.connect(function (extension) {
+                fileExtension = extension
+            })
+
             editor.getModel().onDidChangeContent((event) => {
                 link.fileText = editor.getValue();
                 link.setVersionId(editor.getModel().getAlternativeVersionId());
                 
             });
         });
-    </script>
-    <script>
+
         if(!isInitialized){
-            registerQmlAsLanguage()
+            setLanguage(fileExtension)
         } else {
             editor.dispose()
         } 
