--- a/extern/monaco-editor-0.20.0/editor.html
+++ b/extern/monaco-editor-0.20.0/editor.html
@@ -23,10 +23,11 @@
     <script src="./min/vs/editor/editor.main.nls.js"></script>
     <script src="./min/vs/editor/editor.main.js"></script>
     <script type="text/javascript" src="qrc:///qtwebchannel/qwebchannel.js"></script>
+    <script src="./utils/search.js" type="text/javascript"></script>
     <script src="./utils/helper.js" type="text/javascript"></script>
     <script src="./utils/ids.js" type="text/javascript"></script>
     <script src="./utils/properties.js" type="text/javascript"></script>
-    <script src="./utils/search.js" type="text/javascript"></script>
+    <script src="./utils/suggestions.js" type="text/javascript"></script>
     <script src="./qtQuickTypes.js" type="text/javascript"></script>
     <script src="./qtQuick.js" type="text/javascript"></script>
     <script type="text/javascript">
